Fix style rules on mobile display

--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,7 +1,11 @@
+.profileWrapper {
+  display: flex;
+  justify-content: center;
+}
+
 @media (min-width: 768px) {
   .profileWrapper {
     display: flex;
-    justify-content: center;
     margin-left: var(--mobile-pad);
   }
 }
